将apply控制器重新架构，分多一层service，增加可维护可扩展性

--- a/EmpInfo/EmpInfo.csproj
+++ b/EmpInfo/EmpInfo.csproj
@@ -159,6 +159,8 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\AndroidAppController.cs" />
+    <Compile Include="Controllers\ApplyOldController.cs" />
+    <Compile Include="Controllers\ApplyExtraController.cs" />
     <Compile Include="Controllers\ApplyController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\EPController.cs" />
@@ -178,6 +180,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\IApplyEntryQueue.cs" />
+    <Compile Include="Interfaces\IBeginAuditOtherInfo.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\AdminModels.cs" />
     <Compile Include="Models\all_maxNum.cs">
@@ -492,6 +496,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="Services\ALSv.cs" />
+    <Compile Include="Services\BaseSv.cs" />
+    <Compile Include="Services\BillSv.cs" />
+    <Compile Include="Services\CRSv.cs" />
+    <Compile Include="Services\DPSv.cs" />
+    <Compile Include="Services\EPSv.cs" />
+    <Compile Include="Services\SASv.cs" />
+    <Compile Include="Services\SVSv.cs" />
+    <Compile Include="Services\UCSv.cs" />
+    <Compile Include="Util\BillUtils.cs" />
     <Compile Include="Util\MyEmail.cs" />
     <Compile Include="Util\MyUtils.cs" />
   </ItemGroup>
@@ -1104,14 +1118,14 @@
     <Content Include="Views\AndroidApp\PushClickView.cshtml" />
     <Content Include="Views\K3\AccountReset.cshtml" />
     <None Include="Service References\FlowSvr\FlowSvr.wsdl" />
-    <Content Include="Views\Apply\DormRepairIndex.cshtml" />
-    <Content Include="Views\Apply\GetMyApplyDPList.cshtml" />
-    <Content Include="Views\Apply\CheckAndAuditDPApply.cshtml" />
-    <Content Include="Views\Apply\GetMyAuditedDPList.cshtml" />
-    <Content Include="Views\Apply\GetMyAuditingDPList.cshtml" />
+    <Content Include="Views\ApplyOld\DormRepairIndex.cshtml" />
+    <Content Include="Views\ApplyOld\GetMyApplyDPList.cshtml" />
+    <Content Include="Views\ApplyOld\CheckAndAuditDPApply.cshtml" />
+    <Content Include="Views\ApplyOld\GetMyAuditedDPList.cshtml" />
+    <Content Include="Views\ApplyOld\GetMyAuditingDPList.cshtml" />
     <Content Include="Views\Home\DormGroupIndex.cshtml" />
     <Content Include="Views\Admin\Department.cshtml" />
-    <Content Include="Views\Apply\BeginApplyAL.cshtml" />
+    <Content Include="Views\ApplyOld\BeginApplyAL.cshtml" />
     <Content Include="Views\Shared\_SelectUsers.cshtml" />
     <Content Include="Views\WX\WLogin.cshtml" />
     <Content Include="Views\WX\WLogOut.cshtml" />
@@ -1119,46 +1133,70 @@
     <Content Include="Views\Shared\_SelectDep.cshtml" />
     <Content Include="Views\Home\CheckMonthSalary.cshtml" />
     <Content Include="Views\Shared\_ConfirmPasswordDialog.cshtml" />
-    <Content Include="Views\Apply\CheckALApply.cshtml" />
+    <Content Include="Views\ApplyOld\CheckALApply.cshtml" />
     <Content Include="Views\Home\WorkGroupIndex.cshtml" />
-    <Content Include="Views\Apply\BeginAuditALApply.cshtml" />
-    <Content Include="Views\Apply\CheckFlowRecord.cshtml" />
+    <Content Include="Views\ApplyOld\BeginAuditALApply.cshtml" />
+    <Content Include="Views\ApplyOld\CheckFlowRecord.cshtml" />
     <Content Include="Views\Shared\_InputDialog.cshtml" />
     <Content Include="Views\Shared\_SelectItems.cshtml" />
-    <Content Include="Views\Apply\BeginApplySA.cshtml" />
-    <Content Include="Views\Apply\CheckSAApply.cshtml" />
-    <Content Include="Views\Apply\BeginAuditSAApply.cshtml" />
+    <Content Include="Views\ApplyOld\BeginApplySA.cshtml" />
+    <Content Include="Views\ApplyOld\CheckSAApply.cshtml" />
+    <Content Include="Views\ApplyOld\BeginAuditSAApply.cshtml" />
     <Content Include="Views\K3\StockBillAudit.cshtml" />
     <Content Include="Views\Report\ALReport.cshtml" />
-    <Content Include="Views\Apply\ApplyIndex.cshtml" />
-    <Content Include="Views\Apply\GetMyApplyList.cshtml" />
-    <Content Include="Views\Apply\GetMyAuditingList.cshtml" />
-    <Content Include="Views\Apply\GetMyAuditedList.cshtml" />
-    <Content Include="Views\Apply\BeginApplyUC.cshtml" />
-    <Content Include="Views\Apply\CheckUCApply.cshtml" />
-    <Content Include="Views\Apply\BeginAuditUCApply.cshtml" />
+    <Content Include="Views\ApplyOld\ApplyIndex.cshtml" />
+    <Content Include="Views\ApplyOld\GetMyApplyList.cshtml" />
+    <Content Include="Views\ApplyOld\GetMyAuditingList.cshtml" />
+    <Content Include="Views\ApplyOld\GetMyAuditedList.cshtml" />
+    <Content Include="Views\ApplyOld\BeginApplyUC.cshtml" />
+    <Content Include="Views\ApplyOld\CheckUCApply.cshtml" />
+    <Content Include="Views\ApplyOld\BeginAuditUCApply.cshtml" />
     <Content Include="Views\Report\PrintUC.cshtml" />
     <Content Include="Views\Shared\Close.cshtml" />
-    <Content Include="Views\Apply\GetMyAuditingList.bak.cshtml" />
+    <Content Include="Views\ApplyOld\GetMyAuditingList.bak.cshtml" />
     <Content Include="Views\Report\AssistantEmps.cshtml" />
     <Content Include="Views\Report\CheckAssistantEmp.cshtml" />
-    <Content Include="Views\Apply\BeginApplyCR.cshtml" />
-    <Content Include="Views\Apply\CheckCRApply.cshtml" />
-    <Content Include="Views\Apply\BeginAuditCRApply.cshtml" />
-    <Content Include="Views\Apply\BeginApplySV.cshtml" />
-    <Content Include="Views\Apply\CheckSVApply.cshtml" />
-    <Content Include="Views\Apply\BeginAuditSVApply.cshtml" />
+    <Content Include="Views\ApplyOld\BeginApplyCR.cshtml" />
+    <Content Include="Views\ApplyOld\CheckCRApply.cshtml" />
+    <Content Include="Views\ApplyOld\BeginAuditCRApply.cshtml" />
+    <Content Include="Views\ApplyOld\BeginApplySV.cshtml" />
+    <Content Include="Views\ApplyOld\CheckSVApply.cshtml" />
+    <Content Include="Views\ApplyOld\BeginAuditSVApply.cshtml" />
     <Content Include="Views\Home\EleProcess.cshtml" />
     <Content Include="Views\Report\CRReport.cshtml" />
     <Content Include="Views\Report\SVReport.cshtml" />
     <Content Include="Views\Home\EditPublicFundInfo.cshtml" />
     <Content Include="Views\EP\EquitmentDeps.cshtml" />
     <Content Include="Views\EP\EqDepDetail.cshtml" />
+    <Content Include="Views\ApplyOld\BeginApplyEP.cshtml" />
+    <Content Include="Views\ApplyOld\CheckEPApply.cshtml" />
+    <Content Include="Views\ApplyOld\BeginAuditEPApply.cshtml" />
+    <Content Include="Views\Report\EPReport.cshtml" />
+    <Content Include="Views\Report\UCReport.cshtml" />
+    <Content Include="Views\Apply\ApplyIndex.cshtml" />
+    <Content Include="Views\Apply\BeginApplyAL.cshtml" />
+    <Content Include="Views\Apply\GetMyApplyList.cshtml" />
+    <Content Include="Views\Apply\GetMyALApplyList.cshtml" />
+    <Content Include="Views\Apply\CheckALApply.cshtml" />
+    <Content Include="Views\Apply\CheckFlowRecord.cshtml" />
+    <Content Include="Views\Apply\GetMyAuditedList.cshtml" />
+    <Content Include="Views\Apply\GetMyAuditingList.cshtml" />
+    <Content Include="Views\Apply\BeginAuditALApply.cshtml" />
     <Content Include="Views\Apply\BeginApplyEP.cshtml" />
     <Content Include="Views\Apply\CheckEPApply.cshtml" />
     <Content Include="Views\Apply\BeginAuditEPApply.cshtml" />
-    <Content Include="Views\Report\EPReport.cshtml" />
-    <Content Include="Views\Report\UCReport.cshtml" />
+    <Content Include="Views\Apply\BeginApplyUC.cshtml" />
+    <Content Include="Views\Apply\BeginAuditApply.cshtml" />
+    <Content Include="Views\Apply\CheckUCApply.cshtml" />
+    <Content Include="Views\Apply\BeginApplySA.cshtml" />
+    <Content Include="Views\Apply\CheckSAApply.cshtml" />
+    <Content Include="Views\Apply\BeginApplyCR.cshtml" />
+    <Content Include="Views\Apply\CheckCRApply.cshtml" />
+    <Content Include="Views\Apply\BeginApplySV.cshtml" />
+    <Content Include="Views\Apply\BeginApplyDP.cshtml" />
+    <Content Include="Views\Apply\CheckDPApply.cshtml" />
+    <Content Include="Views\Apply\BeginAuditDPApply.cshtml" />
+    <Content Include="Views\Apply\CheckSVApply.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
